--- a/application/admin/view/auth/role.html
+++ b/application/admin/view/auth/role.html
@@ -39,8 +39,8 @@
 
            </td> 
             <td>
-                <button class="layui-btn layui-btn-xs" onclick="x_admin_show('用户授权','showAuth.html?id={$vo.id}',500,350)">授权</button>
-                <button class="layui-btn layui-btn-xs" onclick="x_admin_show('角色编辑','showRoleEdit.html?id={$vo.id}',500,250)">编辑</button>
+                <button class="layui-btn layui-btn-xs" onclick="x_admin_show('用户授权','showAuth.html?id={$vo.id}',500,350,true)">授权</button>
+                <button class="layui-btn layui-btn-xs" onclick="x_admin_show('角色编辑','showRoleEdit.html?id={$vo.id}',500,250,true)">编辑</button>
                 {php}
                 if($vo['id']!=1){
                 {/php}
