--- a/application/admin/view/branch/city_list.html
+++ b/application/admin/view/branch/city_list.html
@@ -62,7 +62,7 @@
                         templet: function (d) {
                             var handle =
                                 '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'县级列表\',\'/admin/branch/county_list?region_id=' +
-                                d.region_id + '\',null,null);">县级列表</button>';
+                                d.region_id + '\',null,null,true);">县级列表</button>';
                             return handle;
                         }
                     }
