--- a/application/admin/view/company/edit.html
+++ b/application/admin/view/company/edit.html
@@ -94,7 +94,7 @@
                 </div>
             </div>
             <div class="layui-form-item">
-                <label class="layui-form-label">长方形logo</label>
+                <label class="layui-form-label">长方形logo(200px*100px)</label>
                 <div class="layui-input-block" style="display: flex;">
                     <button type="button" class="layui-btn upload-img" data-id="1">
                         <i class="layui-icon">&#xe67c;</i>选择图片
@@ -103,7 +103,7 @@
                 </div>
             </div>
             <div class="layui-form-item">
-                <label class="layui-form-label">正方形logo</label>
+                <label class="layui-form-label">正方形logo(200px*200px)</label>
                 <div class="layui-input-block" style="display: flex;">
                     <button type="button" class="layui-btn upload-img" data-id="2">
                         <i class="layui-icon">&#xe67c;</i>选择图片
