--- a/application/admin/view/company/team.html
+++ b/application/admin/view/company/team.html
@@ -8,13 +8,13 @@
                 <button class="layui-btn  layui-btn-sm layui-btn-danger" lay-event="getCheckData">
                     <i class="layui-icon layui-icon-delete"></i>批量删除
                 </button>
-                <button class="layui-btn layui-btn-sm layui-btn-normal" onclick="x_admin_show('添加技工','addTeam.html?company_id={$company_id}&type=1',800,500)">
+                <button class="layui-btn layui-btn-sm layui-btn-normal" onclick="x_admin_show('添加技工','addTeam.html?company_id={$company_id}&type=1',800,500,true)">
                     <i class="layui-icon layui-icon-add-circle-fine"></i>添加技工
                 </button>
-                <button class="layui-btn layui-btn-sm layui-btn-normal" onclick="x_admin_show('添加工长','addTeam.html?company_id={$company_id}&type=2',800,500)">
+                <button class="layui-btn layui-btn-sm layui-btn-normal" onclick="x_admin_show('添加工长','addTeam.html?company_id={$company_id}&type=2',800,500,true)">
                     <i class="layui-icon layui-icon-add-circle-fine"></i>添加工长
                 </button>
-                <button class="layui-btn layui-btn-sm layui-btn-normal" onclick="x_admin_show('添加设计师','addTeam.html?company_id={$company_id}&type=3',800,500)">
+                <button class="layui-btn layui-btn-sm layui-btn-normal" onclick="x_admin_show('添加设计师','addTeam.html?company_id={$company_id}&type=3',800,500,true)">
                     <i class="layui-icon layui-icon-add-circle-fine"></i>添加设计师
                 </button>
                 <button class="layui-btn layui-btn-sm" onclick="x_admin_show('搜索','searchTeam.html?company_id={$company_id}',400,280)">
