--- a/application/admin/view/goods/attr_add.html
+++ b/application/admin/view/goods/attr_add.html
@@ -19,9 +19,9 @@
     <div class="x-body">
         <div class="layui-form" style="margin-right: 20px;">
             <div class="layui-form-item">
-                <label class="layui-form-label">属性名称</label>
+                <label class="layui-form-label">规格名称</label>
                 <div class="layui-input-block">
-                    <input autocomplete="off" class="layui-input" lay-verify="required" name="name" placeholder="请输入属性名称" type="text" />
+                    <input autocomplete="off" class="layui-input" lay-verify="required" name="name" placeholder="请输入规格名称" type="text" />
                 </div>
             </div>
             <div class="layui-form-item">
@@ -37,9 +37,9 @@
                 </div>
             </div>
             <div class="layui-form-item">
-                <label class="layui-form-label">属性规格</label>
+                <label class="layui-form-label">单位名称</label>
                 <div class="layui-input-block">
-                    <input autocomplete="off" class="layui-input" lay-verify="required" name="specs" placeholder="请输入属性规格" type="number" />
+                    <input autocomplete="off" class="layui-input" lay-verify="required" name="unit" placeholder="请输入单位名称" type="text" value=""/>
                 </div>
             </div>
             <div class="layui-form-item">
