--- a/application/admin/view/goods/unint_edit.html
+++ b/application/admin/view/goods/unint_edit.html
@@ -13,20 +13,9 @@
     <div class="x-body">
         <div class="layui-form" style="margin-right: 20px;">
             <div class="layui-form-item">
-                <label class="layui-form-label">规格名称</label>
+                <label class="layui-form-label">属性名称</label>
                 <div class="layui-input-block">
-                    <input autocomplete="off" class="layui-input" lay-verify="required" name="name" value="{$goods_attr['name']}" placeholder="请输入规格名称" type="text" />
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">所属属性</label>
-                <div class="layui-input-block">
-                    <select name="pid" lay-verify="required">
-                        <option value="">请选择</option>
-                        {volist name='pid' id='vo'}
-                        <option value="{$vo.id}" {if condition="$vo.id == $goods_attr.pid"}selected{/if}>{$vo.name}</option>
-                        {/volist}
-                    </select>
+                    <input autocomplete="off" class="layui-input" lay-verify="required" name="name" value="{$goods_attr['name']}" placeholder="请输入属性名称" type="text" />
                 </div>
             </div>
             <div class="layui-form-item">
@@ -39,6 +28,24 @@
                 <label class="layui-form-label">平台价</label>
                 <div class="layui-input-block">
                     <input autocomplete="off" class="layui-input" lay-verify="required" name="shop_price" value="{$goods_attr['shop_price']}" placeholder="请输入平台价" type="number" />
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <label class="layui-form-label">运费(0为商家包邮)</label>
+                <div class="layui-input-block">
+                    <input autocomplete="off" class="layui-input" lay-verify="required" name="yun" placeholder="请输入运费" type="number" value="{$goods_attr['yun']}"/>
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <label class="layui-form-label">库存</label>
+                <div class="layui-input-block">
+                    <input autocomplete="off" class="layui-input" lay-verify="required" name="ku" placeholder="请输入库存" type="number" value="{$goods_attr['ku']}"/>
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <label class="layui-form-label">单位名称</label>
+                <div class="layui-input-block">
+                    <input autocomplete="off" class="layui-input" lay-verify="required" name="unit" placeholder="请输入单位名称" type="text" value="{$goods_attr['unit']}"/>
                 </div>
             </div>
             <div class="layui-form-item">
