--- a/application/admin/view/goods_brand/brands_edit.html
+++ b/application/admin/view/goods_brand/brands_edit.html
@@ -31,7 +31,7 @@
                 </div>
             </div>
             <div class="layui-form-item">
-                <label class="layui-form-label">品牌logo</label>
+                <label class="layui-form-label">品牌logo(200px*200px)</label>
                 <div class="layui-input-block" style="display: flex;">
                     <button type="button" class="layui-btn upload-img">
                         <i class="layui-icon">&#xe67c;</i>选择图片</i>
