--- a/application/admin/view/member_type/index.html
+++ b/application/admin/view/member_type/index.html
@@ -2,7 +2,7 @@
 
 <body>
     <div class="x-body">
-        <button class="layui-btn layui-btn-sm " onclick="x_admin_show('添加分组','add.html',500,300)"></i>添加分组</button>
+        <button class="layui-btn layui-btn-sm " onclick="x_admin_show('添加分组','add.html',500,300,true)"></i>添加分组</button>
         <button onclick="javascript:location.reload()" class="layui-btn layui-btn-sm">刷新</button>
         <span class="x-right" style="line-height:40px">共有数据:<i class="i_count">{$count}</i>条</span>
 
