--- a/application/admin/view/shop_goods_img/img_add.html
+++ b/application/admin/view/shop_goods_img/img_add.html
@@ -69,7 +69,7 @@
         var demoListView = $('#demoList'),
             uploadListIns = upload.render({
                 elem: '#testList'
-                , url: '/api/file/upload?type=goods' //改成您自己的上传接口
+                , url: '/api/file/upload?type=goodsimg' //改成您自己的上传接口
                 , accept: 'file'
                 , field: 'imgFile'
                 , multiple: true
