--- a/application/admin/view/advertisement/index.html
+++ b/application/admin/view/advertisement/index.html
@@ -15,7 +15,7 @@
                 <button class="layui-btn  layui-btn-sm layui-btn-danger" lay-event="getCheckData">
                     <i class="layui-icon layui-icon-delete"></i>批量删除
                 </button>
-                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加广告位','add.html',600,280)">
+                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加广告位','add.html',600,280,true)">
                     <i class="layui-icon layui-icon-add-circle-fine"></i>添加广告位
                 </button>
                 <button class="layui-btn layui-btn-sm" onclick="javascript:location.reload()">
@@ -60,7 +60,7 @@
                     , {
                         field: 'handle', title: '操作',width: '10%',
                         templet: function (d) {
-                            var handle = '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'编辑广告位\',\'/admin/advertisement/edit?id=' + d.id + '\',600,280);">编辑</button>'+
+                            var handle = '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'编辑广告位\',\'/admin/advertisement/edit?id=' + d.id + '\',600,280,true);">编辑</button>'+
                             '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delUser(' + d.id + ');">删除</button>';
                             return handle;
                         }
