--- a/application/admin/view/article/index.html
+++ b/application/admin/view/article/index.html
@@ -11,7 +11,7 @@
                 <button class="layui-btn  layui-btn-sm layui-btn-danger" lay-event="getCheckData">
                     <i class="layui-icon layui-icon-delete"></i>批量删除
                 </button>
-                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加文章','articleAdd.html',800,500)">
+                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加文章','articleAdd.html',800,500,true)">
                     <i class="layui-icon layui-icon-add-circle-fine"></i>添加文章
                 </button>
                 <button class="layui-btn layui-btn-sm" onclick="javascript:location.reload()">
@@ -75,7 +75,7 @@
                     , {
                         field: 'handle', title: '操作',
                         templet: function (d) {
-                            var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'编辑文章\',\'/admin/article/articleEdit?id=' + d.id + '\',800,480);">编辑</button>' +
+                            var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'编辑文章\',\'/admin/article/articleEdit?id=' + d.id + '\',800,480,true);">编辑</button>' +
                                 '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delUser(' + d.id + ');">删除</button>';
                             return handle;
                         }
