--- a/application/admin/view/auth/index.html
+++ b/application/admin/view/auth/index.html
@@ -6,7 +6,7 @@
 </style>
     <body>
     <div class="x-body" >
-        <button class="layui-btn layui-btn-sm " onclick="x_admin_show('添加菜单','showAdd.html',500,460)"></i>添加菜单</button>
+        <button class="layui-btn layui-btn-sm " onclick="x_admin_show('添加菜单','showAdd.html',500,460,true)"></i>添加菜单</button>
         <button onclick="javascript:location.reload()" class="layui-btn layui-btn-sm">刷新</button>
     <table class="layui-table">
         <thead>
@@ -39,10 +39,10 @@
                                 <td>{eq name='vo.status' value='1'}显示{else/}<font color="red">隐藏</font>{/eq}
                                 </td>
                                 <td>{$vo.sort}</td>
-                                <td><button type="button" onclick="x_admin_show('添加子菜单','addChild.html?id={$vo.id}',500,460)"
+                                <td><button type="button" onclick="x_admin_show('添加子菜单','addChild.html?id={$vo.id}',500,460,true)"
                                         class="layui-btn layui-btn-normal layui-btn-xs">子菜单</button>
                                     <button type="button" onclick="x_admin_show('编辑菜单',
-                                    'showEdit.html?id={$vo.id}',500,460)" class="layui-btn layui-btn-xs">编辑
+                                    'showEdit.html?id={$vo.id}',500,460,true)" class="layui-btn layui-btn-xs">编辑
                                     </button>
                                     <button type="button" onClick="deleteAuthRule({$vo.id})" class="layui-btn layui-btn-xs layui-btn-danger">删除</button>
                                 </td>
