--- a/application/admin/view/banner/index.html
+++ b/application/admin/view/banner/index.html
@@ -15,7 +15,7 @@
                 <button class="layui-btn  layui-btn-sm layui-btn-danger" lay-event="getCheckData">
                     <i class="layui-icon layui-icon-delete"></i>批量删除
                 </button>
-                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加轮播图','bannerAdd.html',800,480)">
+                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加轮播图','bannerAdd.html',800,480,true)">
                     <i class="layui-icon layui-icon-add-circle-fine"></i>添加轮播图
                 </button>
                 <button class="layui-btn layui-btn-sm" onclick="javascript:location.reload()">
@@ -66,7 +66,7 @@
                     , {
                         field: 'handle', title: '操作',width: '10%',
                         templet: function (d) {
-                            var handle = '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'编辑轮播图\',\'/admin/banner/bannerEdit?id=' + d.id + '\',800,480);">编辑</button>'+
+                            var handle = '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'编辑轮播图\',\'/admin/banner/bannerEdit?id=' + d.id + '\',800,480,true);">编辑</button>'+
                             '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delUser(' + d.id + ');">删除</button>';
                             return handle;
                         }
