--- a/application/admin/view/branch/region_list.html
+++ b/application/admin/view/branch/region_list.html
@@ -9,7 +9,7 @@
                 <button class="layui-btn layui-btn-sm" lay-event="getCheckLength">获取选中数目</button>
                 <button class="layui-btn layui-btn-sm" lay-event="isAll">验证是否全选</button> -->
                 
-                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加城市','countyAdd.html',800,480)">
+                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加城市','countyAdd.html',800,480,true)">
                     <i class="layui-icon layui-icon-add-circle-fine"></i>添加城市
                 </button>
                 <!-- <button class="layui-btn layui-btn-sm" onclick="javascript:location.reload()">
@@ -65,7 +65,7 @@
                         templet: function (d) {
                             var handle =
                                 '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'城市列表\',\'/admin/branch/city_list?region_id=' +
-                                d.region_id + '\',null,null);">城市列表</button>';
+                                d.region_id + '\',null,null,true);">城市列表</button>';
                             return handle;
                         }
                     }
