--- a/application/admin/view/cases/index.html
+++ b/application/admin/view/cases/index.html
@@ -66,8 +66,8 @@
                             field: 'handle', title: '操作',
                             templet: function (d) {
                                 var handle = '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="updCase(' + d.id + ');">推荐/撤销</button>' +
-                                    '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delCase(' + d.id + ',1);">删除</button>'+'<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'案例推送\',\'/admin/shop/recommend?id=' + d.id + '\',800,580);">推送</button>'+
-                                    '<button type="button" class="layui-btn layui-btn-search layui-btn-xs" onclick="x_admin_show(\'相册\',\'/admin/cases/img?id=' + d.id + '\',null,null);">相册</button>';
+                                    '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delCase(' + d.id + ',1);">删除</button>'+'<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'案例推送\',\'/admin/shop/recommend?id=' + d.id + '&type=3\',800,580,true);">推送</button>'+
+                                    '<button type="button" class="layui-btn layui-btn-search layui-btn-xs" onclick="x_admin_show(\'相册\',\'/admin/cases/img?id=' + d.id + '\',null,null,true);">相册</button>';
                                 return handle;
                             }
                         }
