--- a/application/admin/view/check/index.html
+++ b/application/admin/view/check/index.html
@@ -99,7 +99,7 @@
                     , {
                         field: 'handle', title: '操作',
                         templet: function (d) {
-                            var handle = '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'查看文章\',\'/admin/check/lookArticle?id=' + d.id + '\',800,440);">查看</button><button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'审核\',\'/admin/check/edit?id=' + d.id +'&type=2' + '\',400,240);">审核</button>' ;
+                            var handle = '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'查看文章\',\'/admin/check/lookArticle?id=' + d.id + '\',800,440,true);">查看</button><button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'审核\',\'/admin/check/edit?id=' + d.id +'&type=2' + '\',400,240);">审核</button>' ;
                             return handle;
                         }
                     }
@@ -125,7 +125,7 @@
                     , {
                         field: 'handle', title: '操作',
                         templet: function (d) {
-                            var handle = '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'查看案例\',\'/admin/check/lookCases?id=' + d.id + '\',800,440);">查看</button><button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'审核\',\'/admin/check/edit?id=' + d.id +'&type=3' + '\',400,240);">审核</button>' ;
+                            var handle = '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'查看案例\',\'/admin/check/lookCases?id=' + d.id + '\',800,440,true);">查看</button><button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'审核\',\'/admin/check/edit?id=' + d.id +'&type=3' + '\',400,240);">审核</button>' ;
                             return handle;
                         }
                     }
@@ -210,7 +210,7 @@
                     , {
                         field: 'handle', title: '操作',width:'10%',
                         templet: function (d) {
-                            var handle = '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'查看个人信息\',\'/admin/check/lookUser?id=' + d.id + '&type=6' + '\',800,440);">查看</button><button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'审核\',\'/admin/check/edit?id=' + d.id +'&type=6' + '\',400,240);">审核</button>' ;
+                            var handle = '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'查看个人信息\',\'/admin/check/lookUser?id=' + d.id + '&type=6' + '\',800,440,true);">查看</button><button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'审核\',\'/admin/check/edit?id=' + d.id +'&type=6' + '\',400,240);">审核</button>' ;
                             return handle;
                         }
                     }
@@ -237,7 +237,7 @@
                     , {
                         field: 'handle', title: '操作',width:'10%',
                         templet: function (d) {
-                            var handle = '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'查看个人信息\',\'/admin/check/lookUser?id=' + d.id + '&type=7' + '\',800,440);">查看</button><button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'审核\',\'/admin/check/edit?id=' + d.id +'&type=7' + '\',400,240);">审核</button>' ;
+                            var handle = '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'查看个人信息\',\'/admin/check/lookUser?id=' + d.id + '&type=7' + '\',800,440,true);">查看</button><button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'审核\',\'/admin/check/edit?id=' + d.id +'&type=7' + '\',400,240);">审核</button>' ;
                             return handle;
                         }
                     }
@@ -264,7 +264,34 @@
                     , {
                         field: 'handle', title: '操作',width:'10%',
                         templet: function (d) {
-                            var handle = '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'查看个人信息\',\'/admin/check/lookUser?id=' + d.id + '&type=8' + '\',800,440);">查看</button><button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'审核\',\'/admin/check/edit?id=' + d.id +'&type=8' + '\',400,240);">审核</button>' ;
+                            var handle = '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'查看个人信息\',\'/admin/check/lookUser?id=' + d.id + '&type=8' + '\',800,440,true);">查看</button><button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'审核\',\'/admin/check/edit?id=' + d.id +'&type=8' + '\',400,240);">审核</button>' ;
+                            return handle;
+                        }
+                    }
+                ]
+            ]
+        });
+       }else if(type == 9){
+        tableIns = table.render({
+            elem: '#demo'
+            , toolbar: '#toolbarDemo'
+            , defaultToolbar: []
+            , url: '/admin/check/shop' //数据接口
+            , page: true //开启分页
+            , limit: 20
+            , id: 'test'
+            , cols: [
+                [ //表头
+                    { type: 'checkbox', fixed: 'left',width:'5%' }
+                    , { field: 'id', title: 'ID', width: '10%', fixed: 'left',templet:function(d){return d.LAY_INDEX;}}
+                    , { field: 'user', title: '联系人', width: '20%' }
+                    , { field: 'region_name', title: '所属地区', width: '20%' }
+                    , { field: 'mobile', title: '联系电话', width: '20%' }
+                    , { field: 'create_time', title: '创建时间', width: '15%', }
+                    , {
+                        field: 'handle', title: '操作',width:'10%',
+                        templet: function (d) {
+                            var handle = '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'查看个人信息\',\'/admin/check/lookUser?id=' + d.id + '&type=9' + '\',800,440,true);">查看</button><button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'审核\',\'/admin/check/edit?id=' + d.id +'&type=9' + '\',400,240);">审核</button>' ;
                             return handle;
                         }
                     }
