--- a/application/admin/view/community/index.html
+++ b/application/admin/view/community/index.html
@@ -11,7 +11,7 @@
                 <button class="layui-btn  layui-btn-sm layui-btn-danger" onclick="delAll()">
                     <i class="layui-icon layui-icon-delete"></i>批量删除
                 </button>
-                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加小区','communityAdd.html',800,480)">
+                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加小区','communityAdd.html',800,480,true)">
                     <i class="layui-icon layui-icon-add-circle-fine"></i>添加小区
                 </button>
                 <button class="layui-btn layui-btn-sm" onclick="javascript:location.reload()">
@@ -50,7 +50,7 @@
                     , {
                         field: 'handle', title: '操作',
                         templet: function (d) {
-                            var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'编辑小区\',\'/admin/community/communityEdit?id=' + d.id + '\',800,480);">编辑</button>' +
+                            var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'编辑小区\',\'/admin/community/communityEdit?id=' + d.id + '\',800,480,true);">编辑</button>' +
                                 '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delCommunity(' + d.id + ');">删除</button>';
                             return handle;
                         }
