--- a/application/admin/view/company/index.html
+++ b/application/admin/view/company/index.html
@@ -16,7 +16,7 @@
                     <i class="layui-icon layui-icon-delete"></i>撤销至分站
                 </button>
                 {/if}
-                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加装饰公司','add.html',800,500)">
+                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加装饰公司','add.html',800,500,true)">
                     <i class="layui-icon layui-icon-add-circle-fine"></i>添加
                 </button>
                 <button class="layui-btn layui-btn-sm" onclick="x_admin_show('搜索','search.html',400,280)">
@@ -64,7 +64,7 @@
                     , {
                         field: 'handle', title: '操作', width: '13%',
                         templet: function (d) {
-                            var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'公司团队\',\'/admin/company/team?company_id=' + d.id + '\',1000,480);">团队</button>' + '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'编辑装饰公司\',\'/admin/company/edit?id=' + d.id + '\',800,480);">编辑</button>' + '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delUser(' + d.id + ');">删除</button>';
+                            var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'公司团队\',\'/admin/company/team?company_id=' + d.id + '\',1000,480,true);">团队</button>' + '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'编辑装饰公司\',\'/admin/company/edit?id=' + d.id + '\',800,480,true);">编辑</button>' + '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delUser(' + d.id + ');">删除</button>';
                             return handle;
                         }
                     }
