--- a/application/admin/view/gong_zhang/index.html
+++ b/application/admin/view/gong_zhang/index.html
@@ -16,7 +16,7 @@
                     <i class="layui-icon layui-icon-delete"></i>撤销至分站
                 </button>
                 {/if}
-                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加工长','gongZhangAdd.html',800,500)">
+                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加工长','gongZhangAdd.html',800,500,true)">
                     <i class="layui-icon layui-icon-add-circle-fine"></i>添加
                 </button>
                 <button class="layui-btn layui-btn-sm" onclick="x_admin_show('搜索','earch.html',400,280)">
@@ -60,7 +60,7 @@
                     , {
                         field: 'handle', title: '操作',width:'10%',
                         templet: function (d) {
-                            var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'编辑工长\',\'/admin/gong_zhang/gongZhangEdit?id=' + d.id+'\',800,480);">编辑</button>' +
+                            var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'编辑工长\',\'/admin/gong_zhang/gongZhangEdit?id=' + d.id+'\',800,480,true);">编辑</button>' +
                                 '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delUser(' + d.id + ');">删除</button>';
                             return handle;
                         }
