--- a/application/admin/view/goods_cate/cate_index.html
+++ b/application/admin/view/goods_cate/cate_index.html
@@ -2,7 +2,7 @@
 
 <body>
     <div class="x-body">
-        <button class="layui-btn layui-btn-sm " onclick="x_admin_show('添加分类','cateAdd.html',500,460)"></i>添加分类</button>
+        <button class="layui-btn layui-btn-sm " onclick="x_admin_show('添加分类','cateAdd.html',500,460,true)"></i>添加分类</button>
         <button onclick="javascript:location.reload()" class="layui-btn layui-btn-sm">刷新</button>
         <span class="x-right" style="line-height:40px">共有数据:<i class="i_count">{$count}</i>条</span>
 
@@ -32,7 +32,7 @@
                         <button type="button" onclick="x_admin_show('绑定品牌',
                         'addBrands.html?id={$vo.id}',800,500)"
                             class="layui-btn layui-btn-warm layui-btn-xs">品牌</button>
-                        <button type="button" onclick="x_admin_show('编辑分类','cateEdit.html?id={$vo.id}',500,460)"
+                        <button type="button" onclick="x_admin_show('编辑分类','cateEdit.html?id={$vo.id}',500,460,true)"
                             class="layui-btn layui-btn-xs">编辑
                         </button>
                         <button type="button" onClick="deleteAuthRule({$vo.id})"
