--- a/application/admin/view/order/index.html
+++ b/application/admin/view/order/index.html
@@ -54,7 +54,7 @@
                     , {
                         field: 'handle', title: '操作',width: '7%',
                         templet: function (d) {
-                            var handle = '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'订单详情\',\'/admin/order/detail?id=' + d.id + '\',900,500);">详情</button>';
+                            var handle = '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'订单详情\',\'/admin/order/detail?id=' + d.id + '\',900,500,true);">详情</button>';
                             return handle;
                         }
                     }
