--- a/application/admin/view/ornament/index.html
+++ b/application/admin/view/ornament/index.html
@@ -54,7 +54,7 @@
                     , {
                         field: 'handle', title: '操作', width: '10%',
                         templet: function (d) {
-                            var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'查看\',\'/admin/ornament/look?id=' + d.id + '\',600,480);">查看</button>' +
+                            var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'查看\',\'/admin/ornament/look?id=' + d.id + '\',600,480,true);">查看</button>' +
                                 '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delNotice(' + d.id + ');">处理</button>';
                             return handle;
                         }
