--- a/application/admin/view/recommend/add.html
+++ b/application/admin/view/recommend/add.html
@@ -16,6 +16,18 @@
                 </div>
             </div>
             <div class="layui-form-item">
+                <label class="layui-form-label">推荐类型</label>
+                <div class="layui-input-block">
+                    <select name="type" lay-verify="required">
+                        <option value="">请选择</option>
+                        <option value="1">商品</option>
+                        <option value="2">商家</option>
+                        <option value="3">案例</option>
+                        <option value="4">文章</option>
+                    </select>
+                </div>
+            </div>
+            <div class="layui-form-item">
                 <label class="layui-form-label">状态</label>
                 <div class="layui-input-block">
                     <input type="checkbox" name="status" lay-skin="switch" lay-text="正常|禁用" value="1" checked>
