--- a/application/admin/view/shop/cate_lis.html
+++ b/application/admin/view/shop/cate_lis.html
@@ -15,7 +15,7 @@
                 <button class="layui-btn  layui-btn-sm layui-btn-danger" lay-event="getCheckData">
                     <i class="layui-icon layui-icon-delete"></i>批量删除
                 </button>
-                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加分类','cateAdd.html?shop_id={$shop_id}',600,380)">
+                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加分类','cateAdd.html?shop_id={$shop_id}',600,380,true)">
                     <i class="layui-icon layui-icon-add-circle-fine"></i>添加分类
                 </button>
                 <button class="layui-btn layui-btn-sm" onclick="javascript:location.reload()">
@@ -61,7 +61,7 @@
                     , {
                         field: 'handle', title: '操作',width: '10%',
                         templet: function (d) {
-                            var handle = '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'编辑分类\',\'/admin/shop/cateEdit?id=' + d.id + '\',600,380);">编辑</button>'+
+                            var handle = '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'编辑分类\',\'/admin/shop/cateEdit?id=' + d.id + '\',600,380,true);">编辑</button>'+
                             '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delUser(' + d.id + ');">删除</button>';
                             return handle;
                         }
