--- a/application/admin/view/shop/index.html
+++ b/application/admin/view/shop/index.html
@@ -14,13 +14,13 @@
                     <i class="layui-icon layui-icon-delete"></i>批量删除
                 </button>
                 {/if}
-                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加商家','shopAdd.html',820,500)">
+                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加商家','shopAdd.html',820,500,true)">
                     <i class="layui-icon layui-icon-add-circle-fine"></i>添加商家
                 </button>
                 <button class="layui-btn layui-btn-sm" onclick="javascript:location.reload()">
                     <i class="layui-icon layui-icon-refresh"></i>刷新
                 </button>
-                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('搜索商家','search.html',800,500)">
+                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('搜索商家','search.html',800,500,true)">
                     <i class="layui-icon layui-icon-search"></i>搜索
                 </button>
             </div>
@@ -61,13 +61,13 @@
                     , {
                         field: 'handle', title: '操作',width:'25%',
                         templet: function (d) {
-                            var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'商家商品\',\'/admin/shop_goods/goodsLis?id=' + d.id + '\',1000,500);">商品</button>';
+                            var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'商家商品\',\'/admin/shop_goods/goodsLis?id=' + d.id + '\',1000,500,true);">商品</button>';
                             if(d.realname){
                                 var type = '解绑用户';
                             }else{
                                 var type = '绑定用户';
                             }
-                            handle +='<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\''+type+'\',\'/admin/shop/userAdd?id=' + d.id + '\',800,500);">用户</button>'+'<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'商品分类\',\'/admin/shop/cateLis?id=' + d.id + '\',1000,580);">分类</button>'+'<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'编辑商家\',\'/admin/shop/shopEdit?id=' + d.id + '\',800,480);">编辑</button>'+'<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'商家推送\',\'/admin/shop/recommend?id=' + d.id + '\',800,580);">推送</button>'+'<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delUser(' + d.id + ');">删除</button>';
+                            handle +='<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\''+type+'\',\'/admin/shop/userAdd?id=' + d.id + '\',800,500,true);">用户</button>'+'<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'商品分类\',\'/admin/shop/cateLis?id=' + d.id + '\',1000,580,true);">分类</button>'+'<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'编辑商家\',\'/admin/shop/shopEdit?id=' + d.id + '\',800,480,true);">编辑</button>'+'<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'商家推送\',\'/admin/shop/recommend?id=' + d.id + '&type=2\',800,580,true);">推送</button>'+'<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delUser(' + d.id + ');">删除</button>';
                             return handle;
                         }
                     }
