--- a/application/admin/view/shop_goods/goods_lis.html
+++ b/application/admin/view/shop_goods/goods_lis.html
@@ -24,7 +24,7 @@
                     <i class="layui-icon layui-icon-delete"></i>批量删除
                 </button>
                 {/if}
-                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加商品','goodsAdd.html?shop_id={$shop_id}&cate_id={$cate_id}',820,500)">
+                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加商品','goodsAdd.html?shop_id={$shop_id}&cate_id={$cate_id}',820,500,true)">
                     <i class="layui-icon layui-icon-add-circle-fine"></i>添加商品
                 </button>
                 <button class="layui-btn layui-btn-sm" onclick="javascript:location.reload()">
@@ -83,7 +83,7 @@
                     , {
                         field: 'handle', title: '操作',
                         templet: function (d) {
-                            var handle = '<button type="button" class="layui-btn layui-btn-warm layui-btn-xs" onclick="x_admin_show(\'商品相册\',\'/admin/shop_goods_img/goodsImg?id=' + d.id + '\',900,500);">相册</button>'+'<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'商品属性\',\'/admin/shop_goods_attr/goodsAttr?id=' + d.id + '\',900,500);">属性</button>'+'<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'商品规格\',\'/admin/shop_goods_attr/unintList?id=' + d.id + '\',860,500);">规格</button>'+'<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'商品推送\',\'/admin/shop/recommend?id=' + d.id + '\',800,580);">推送</button>'+'<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'编辑商品\',\'/admin/shop_goods/goodsEdit?id=' + d.id + '\',900,480);">编辑</button>'+'<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delUser(' + d.id + ');">删除</button>';
+                            var handle = '<button type="button" class="layui-btn layui-btn-warm layui-btn-xs" onclick="x_admin_show(\'商品相册\',\'/admin/shop_goods_img/goodsImg?id=' + d.id + '\',900,500,true);">相册</button>'+'<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'商品规格\',\'/admin/shop_goods_attr/goodsAttr?id=' + d.id + '\',900,500,true);">规格</button>'+'<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'商品推送\',\'/admin/shop/recommend?id=' + d.id + '&type=1\',800,580,true);">推送</button>'+'<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'编辑商品\',\'/admin/shop_goods/goodsEdit?id=' + d.id + '\',900,480,true);">编辑</button>'+'<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delUser(' + d.id + ');">删除</button>';
                             return handle;
                         }
                     }
