--- a/application/admin/view/shop_goods_attr/attr_edit.html
+++ b/application/admin/view/shop_goods_attr/attr_edit.html
@@ -13,9 +13,9 @@
     <div class="x-body">
         <div class="layui-form" style="margin-right: 20px;">
             <div class="layui-form-item">
-                <label class="layui-form-label">属性名称</label>
+                <label class="layui-form-label">规格名称</label>
                 <div class="layui-input-block">
-                    <input autocomplete="off" class="layui-input" lay-verify="required" name="name" value="{$goods_attr['name']}" placeholder="请输入属性名称" type="text" />
+                    <input autocomplete="off" class="layui-input" lay-verify="required" name="name" value="{$goods_attr['name']}" placeholder="请输入规格名称" type="text" />
                 </div>
             </div>
             <div class="layui-form-item">
@@ -28,6 +28,12 @@
                 <label class="layui-form-label">平台价</label>
                 <div class="layui-input-block">
                     <input autocomplete="off" class="layui-input" lay-verify="required" name="shop_price" value="{$goods_attr['shop_price']}" placeholder="请输入平台价" type="number" />
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <label class="layui-form-label">单位名称</label>
+                <div class="layui-input-block">
+                    <input autocomplete="off" class="layui-input" lay-verify="required" name="unit" placeholder="请输入单位名称" type="text" value="{$goods_attr['unit']}"/>
                 </div>
             </div>
             <div class="layui-form-item">
@@ -65,6 +71,12 @@
                     <div class="layui-input-block">
                         <input autocomplete="off" class="layui-input pay_type" name="pay_three" placeholder="请输入三批占比" type="number" value="{$goods_attr['pay_three']}" />
                     </div>
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <label class="layui-form-label">排序</label>
+                <div class="layui-input-block">
+                    <input autocomplete="off" class="layui-input" lay-verify="required" name="sort" placeholder="数值越大越靠前" type="number" value="{$goods_attr['sort']}"/>
                 </div>
             </div>
             <div class="layui-form-item">
