--- a/application/admin/view/system/setting.html
+++ b/application/admin/view/system/setting.html
@@ -40,7 +40,7 @@
                     , {
                         field: 'handle', title: '操作',
                         templet: function (d) {
-                            var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'设置\',\'/admin/system/setEdit?id=' + d.id + '\',800,480);">设置</button>';
+                            var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'设置\',\'/admin/system/setEdit?id=' + d.id + '\',800,480,true);">设置</button>';
                             return handle;
                         }
                     }
